Fixed loading of the roms into memory from disk. Not certain if roms are being parsed correctly.

--- a/emulator.html
+++ b/emulator.html
@@ -11,6 +11,7 @@
 
             let canvas = document.getElementById("emulator_screen");
             let emulator = new Chip8Emulator(canvas);
+            emulator.loadRom("roms/chip8/MAZE");
 
         </script>
     </body>
