Multiple errors corrected in Chip8 and VRam. Not currently displaying anything on screen. Possible parsing errors for ROM.

--- a/emulator.html
+++ b/emulator.html
@@ -11,7 +11,7 @@
 
             let canvas = document.getElementById("emulator_screen");
             let emulator = new Chip8Emulator(canvas);
-            emulator.loadRom("roms/chip8/MAZE");
+            emulator.loadRom("roms/chip8/UFO");
 
         </script>
     </body>
